--- a/index.html
+++ b/index.html
@@ -422,12 +422,32 @@
   const SUPABASE_ANON_KEY = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6ImNwdW9pZ2x2anBpdXdxZnF2a2t3Iiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjYwNDYxMDksImV4cCI6MjA4MTYyMjEwOX0.4kR823mI2hO4k9-RxzNsPjPJp9Y-ti60dlTt_Ey-E4g';
   const supabaseClient = supabase.createClient(SUPABASE_URL, SUPABASE_ANON_KEY);
 
-  const EMOJIS = [
-    '🎅', '🎄', '🎁', '✨', '🦌', '❄️', '🎇', '⛄', '🕯️', '🔔',
-    '🌟', '🧦', '🤶', '🧝', '🍪', '🥛', '🍷', '🥂', '🍾', '🎉',
-    '🎊', '🎆', '🪅', '🎨', '🎭', '🎪', '🎬', '🎧', '🎶', '🎵',
-    '🎻', '🎺', '🥁', '🪘', '🪇', '🧣', '🧤', '🧥', '🔥', '💫'
-  ];
+const EMOJIS = [
+  // 🎄 Рождество и зима
+  '🎅', '🤶', '🎄', '🎁', '🧦', '❄️', '⛄', '🦌', '🕯️', '🔔', '🌟', '✨', '🎆', '🎇', '🪅',
+  
+  // ❤️ Эмоции и сердца
+  '😊', '🥰', '😍', '🤗', '🤩', '🎉', '🎊', '💖', '❤️', '💙', '💚', '💛', '💜', '🧡', '🖤',
+  
+  // 👨‍👩‍👧 Люди и семья
+  '👨‍👩‍👧', '👨‍👩‍👦', '👩‍👧', '👨‍👧', '👵', '👴', '👶', '👧', '👦', '👩', '👨', '🧓', '🧑', '🧑‍🎄',
+  
+  // 🌟 Природа и небо
+  '🌞', '🌙', '⛅', '🌤️', '🌈', '☃️', '🔥', '💫', '🪐', '🌌', '🌠',
+  
+  // 🎁 Подарки, еда, напитки
+  '🍪', '🥛', '🍷', '🥂', '🍾', '🍬', '🍫', '🍩', '🍰', '🧁', '🥧', '🍮', '🍺', '🍹', '☕',
+  
+  // ✨ Магия и веселье
+  '🎭', '🎨', '🎪', '🎬', '🎧', '🎤', '🎧', '🎼', '🎹', '🎻', '🥁', '🪘', '🪇', '🎮', '🎯',
+  
+  // 🎶 Музыка и танцы
+  '💃', '🕺', '🩰', '🎭', '🎪', '🎫', '🎬', '🎧', '🎶', '🎵', '🎼', '🎤', '🎧',
+  
+  // 💫 Дополнительные праздничные
+  '💫', '⭐', '🌟', '✨', '🎇', '🎆', '🎊', '🎉', '💝', '🎀', '🎁', '🎄', '❄️', '🌨️', '☃️',
+  '🧣', '🧤', '👢', '👒', '👑', '🎭', '🎪', '🎫', '🎲', '♟️', '🎯', '📌', '📍', '💫', '⭐'
+];
 
   function setLanguage(lang) {
     currentLang = lang;
@@ -821,3 +841,4 @@
 </script>
 </body>
 </html>
+
